# wordnet-embeddings

./: .gitignore  LICENSE  README.md  build_graph.sh  export.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh  train.sh
benchmarks/: sts_summary_20260618T014500Z.json  sts_summary_20260621T201515Z.json
engine/: Dockerfile.windows  Makefile
engine/include/: embed.h
engine/src/: embed.c
engine/tests/: test_engine.c
tests/: test_build_graph.py  test_embed_ctypes.py  test_nltk_utils.py  test_open_english_wordnet_source.py  test_vocab_sources.py  test_wordnet_source.py
wordnet_embeddings/: benchmark.py  build_graph.py  config.py  export.py  export_sentence_transformers.py  train.py
wordnet_embeddings/sources/: __init__.py  _nltk_utils.py  base.py  open_english_wordnet.py  vocab.py  wordnet.py
